Fix icon-links alignment

--- a/_sass/_lists.scss
+++ b/_sass/_lists.scss
@@ -35,7 +35,6 @@ h2 + .tag-list {
 }
 
 .icon-links svg {
-	vertical-align: middle;
 	fill: currentColor;
 	color: #AAB2BD;
 	stroke: none;
